force-app/main/default/objects/Contact/fields/Able_and_willing_to_travel__c.field-meta.xml
<CustomField>
    <fullName>Able_and_willing_to_travel__c</fullName>
    <description>Are you able and willing to travel to attend events?</description>
    <inlineHelpText>Are you able and willing to travel to attend events?</inlineHelpText>
    <label>Able and willing to travel?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Field</valueSetName>
    </valueSet>
</CustomField>