force-app/main/default/objects/Contact/fields/ACF_Course_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>ACF_Course_Expiry_Date__c</fullName>
    <description>Pulls latest course date from ACF Course Expiry (hidden field) for ACF Refresh and ACF Safeguarding Children.</description>
    <label>ACF Course Expiry Date</label>
    <summarizedField>Volunteer_Course__c.ACF_Course_Expiry_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Volunteer_Course__c.Course__c</field>
        <operation>equals</operation>
        <value>ACF Refresh, ACF Safeguarding Children</value>
    </summaryFilterItems>
    <summaryForeignKey>Volunteer_Course__c.Volunteer__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>