force-app/main/default/objects/Contact/fields/Acquisition_Source__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Source__c</fullName>
    <label>Acquisition Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>