force-app/main/default/objects/Contact/fields/Activate_Portal__c.field-meta.xml
<CustomField>
    <fullName>Activate_Portal__c</fullName>
    <description>This field is use for Activate Portal Family flow to schedule.</description>
    <label>Activate Portal</label>
    <type>DateTime</type>
</CustomField>