force-app/main/default/objects/Contact/fields/Added_After_Registration__c.field-meta.xml
<CustomField>
    <fullName>Added_After_Registration__c</fullName>
    <formula>if (  text(Family_Member_Type__c) = &apos;Patient&apos;, false, if(  DATEVALUE(CreatedDate) &lt; DATEVALUE(&apos;2016-11-14&apos;), False, if (AND(CreatedDate &gt;  Account.CreatedDate +90, Added_After_Registration_Override__c =FALSE), true, false)))</formula>
    <label>Added After Registration</label>
    <type>Checkbox</type>
</CustomField>