force-app/main/default/objects/Contact/fields/Added_After_Registration_Override__c.field-meta.xml
<CustomField>
    <fullName>Added_After_Registration_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to correct the &quot;Added after registration&quot; checkbox when this has been marked incorrect</description>
    <inlineHelpText>Used to correct the &quot;Added after registration&quot; checkbox when this has been marked incorrect</inlineHelpText>
    <label>Added After Registration Override</label>
    <type>Checkbox</type>
</CustomField>