force-app/main/default/objects/Contact/fields/Age_Status__c.field-meta.xml
<CustomField>
    <fullName>Age_Status__c</fullName>
    <label>Age Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Adult</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>