force-app/main/default/objects/Contact/fields/Allows_images__c.field-meta.xml
<CustomField>
    <fullName>Allows_images__c</fullName>
    <inlineHelpText>Family allows photos/video footage to be taken of them</inlineHelpText>
    <label>Allows images</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Field</valueSetName>
    </valueSet>
</CustomField>