force-app/main/default/objects/Contact/fields/Amount_Fundraised_Total__c.field-meta.xml
<CustomField>
    <fullName>Amount_Fundraised_Total__c</fullName>
    <label>Amount Fundraised Total</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>