force-app/main/default/objects/Contact/fields/Annotation__c.field-meta.xml
<CustomField>
    <fullName>Annotation__c</fullName>
    <label>Annotation</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>