force-app/main/default/objects/Contact/fields/Annotation_Auto_Display__c.field-meta.xml
<CustomField>
    <fullName>Annotation_Auto_Display__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Annotation Auto Display</label>
    <type>Checkbox</type>
</CustomField>