force-app/main/default/objects/Contact/fields/Ask_1__c.field-meta.xml
<CustomField>
    <fullName>Ask_1__c</fullName>
    <label>Ask 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>