force-app/main/default/objects/Contact/fields/Ask_2__c.field-meta.xml
<CustomField>
    <fullName>Ask_2__c</fullName>
    <label>Ask 2</label>
    <length>18</length>
    <type>Text</type>
</CustomField>