force-app/main/default/objects/Contact/fields/ATSIC__c.field-meta.xml
<CustomField>
    <fullName>ATSIC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do you identify as Aboriginal or Torres Strait Islander heritgage?</description>
    <label>ATSIC</label>
    <type>Checkbox</type>
</CustomField>