force-app/main/default/objects/Contact/fields/Attachment_Lead__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attachment Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>