force-app/main/default/objects/Contact/fields/Bequests_EmailPref__c.field-meta.xml
<CustomField>
    <fullName>Bequests_EmailPref__c</fullName>
    <description>Preference centre option for bequest comms</description>
    <label>Bequests_EmailPref</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Email_Preference_Centre</valueSetName>
    </valueSet>
</CustomField>