force-app/main/default/objects/Contact/fields/Birthday_Month__c.field-meta.xml
<CustomField>
    <fullName>Birthday_Month__c</fullName>
    <formula>if (
MONTH( Birthdate ) = 1 ,&quot;Jan&quot;,
if (MONTH( Birthdate ) = 2 ,&quot;Feb&quot;,
if (MONTH( Birthdate ) = 3 ,&quot;Mar&quot;,
if (MONTH( Birthdate ) = 4 ,&quot;Apr&quot;,
if (MONTH( Birthdate ) = 5 ,&quot;May&quot;,
if (MONTH( Birthdate ) = 6 ,&quot;Jun&quot;,
if (MONTH( Birthdate ) = 7 ,&quot;Jul&quot;,
if (MONTH( Birthdate ) = 8 ,&quot;Aug&quot;,
if (MONTH( Birthdate ) = 9 ,&quot;Sep&quot;,
if (MONTH( Birthdate ) = 10 ,&quot;Oct&quot;,
if (MONTH( Birthdate ) = 11 ,&quot;Nov&quot;,
if (MONTH( Birthdate ) = 12 ,&quot;Dec&quot;,

&quot;None&quot;
))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthday Month</label>
    <type>Text</type>
</CustomField>