force-app/main/default/objects/Contact/fields/Board_Member__c.field-meta.xml
<CustomField>
    <fullName>Board_Member__c</fullName>
    <formula>IF( INCLUDES( Constituent_Types__c, &quot;Board Member&quot;),TRUE,FALSE)</formula>
    <label>Board Member</label>
    <type>Checkbox</type>
</CustomField>