force-app/main/default/objects/Contact/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <description>Denotes which department owns the record</description>
    <inlineHelpText>Denotes which department owns the record</inlineHelpText>
    <label>Branch</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Constituent Type 1</fullName>
            </value>
            <value>
                <fullName>Constituent Type 2</fullName>
            </value>
            <value>
                <fullName>Constituent Type 3</fullName>
            </value>
            <value>
                <fullName>Constituent Type 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>