force-app/main/default/objects/Contact/fields/Branch_Office__c.field-meta.xml
<CustomField>
    <fullName>Branch_Office__c</fullName>
    <label>Contact Branch Office</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Western Australia</fullName>
            </value>
            <value>
                <fullName>South Australia</fullName>
            </value>
            <value>
                <fullName>Victoria</fullName>
            </value>
            <value>
                <fullName>SNSW</fullName>
            </value>
            <value>
                <fullName>Sydney</fullName>
            </value>
            <value>
                <fullName>Northern New South Wales</fullName>
            </value>
            <value>
                <fullName>Queensland</fullName>
            </value>
            <value>
                <fullName>Tasmania</fullName>
            </value>
            <value>
                <fullName>Northern Territory</fullName>
            </value>
            <value>
                <fullName>Newcastle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>