force-app/main/default/objects/Contact/fields/CancerSupport_EmailPref__c.field-meta.xml
<CustomField>
    <fullName>CancerSupport_EmailPref__c</fullName>
    <description>Cancer Support Comms Email Preferences</description>
    <label>CancerSupport_EmailPref</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Email_Preference_Centre</valueSetName>
    </valueSet>
</CustomField>