force-app/main/default/objects/Contact/fields/Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_Safe_ID__c</fullName>
    <description>18 char ID</description>
    <formula>CASESAFEID(Id)</formula>
    <label>Case Safe ID</label>
    <type>Text</type>
</CustomField>