force-app/main/default/objects/Contact/fields/CFY_RG_Donation_Amount__c.field-meta.xml
<CustomField>
    <fullName>CFY_RG_Donation_Amount__c</fullName>
    <description>Total Amount of Recurring Donations over the current fiscal year</description>
    <inlineHelpText>Total Amount of Recurring Donations over the current fiscal year - Runs first of Month</inlineHelpText>
    <label>CFY RG Donation Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>