force-app/main/default/objects/Contact/fields/Child_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Child_External_Id__c</fullName>
    <description>FirstName+LastName+DOB</description>
    <externalId>true</externalId>
    <inlineHelpText>External Id Used for mapping upsert for external webforms for Children</inlineHelpText>
    <label>Child External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>