force-app/main/default/objects/Contact/fields/Child_Image_Opt_In_Permission_Corporate__c.field-meta.xml
<CustomField>
    <fullName>Child_Image_Opt_In_Permission_Corporate__c</fullName>
    <description>Formuala Field which simply takes the value of the Image permission field from the related account object</description>
    <formula>Account.Image_Opt_In_Permission_Corporate_Child__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child Image Opt-In Permission Corporate</label>
    <type>Checkbox</type>
</CustomField>