force-app/main/default/objects/Contact/fields/Child_Reached_Age_Activities__c.field-meta.xml
<CustomField>
    <fullName>Child_Reached_Age_Activities__c</fullName>
    <description>Child received at least one puppet show or age camp</description>
    <formula>if(OR( No_Of_Age_Camp_Child__c &gt;0,  Puppet_Show_Count__c &gt;0 ), &quot;Reached&quot;, &quot;Not Yet Reached&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Child received at least one puppet show or age camp</inlineHelpText>
    <label>Child Reached Age Activities</label>
    <type>Text</type>
</CustomField>