force-app/main/default/objects/Contact/fields/Code_of_Conduct_Date__c.field-meta.xml
<CustomField>
    <fullName>Code_of_Conduct_Date__c</fullName>
    <label>Code of Conduct Date</label>
    <type>Date</type>
</CustomField>