force-app/main/default/objects/Contact/fields/Community_Fundraising_EmailPref__c.field-meta.xml
<CustomField>
    <fullName>Community_Fundraising_EmailPref__c</fullName>
    <label>Community_Fundraising_EmailPref</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Email_Preference_Centre</valueSetName>
    </valueSet>
</CustomField>