force-app/main/default/objects/Contact/fields/Competitions_emailpref_c__c.field-meta.xml
<CustomField>
    <fullName>Competitions_emailpref_c__c</fullName>
    <description>Compeittions or Lotteries Preference Centre</description>
    <label>Competitions_emailpref__c</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Email_Preference_Centre</valueSetName>
    </valueSet>
</CustomField>