force-app/main/default/objects/Contact/fields/Constituent_ID__c.field-meta.xml
<CustomField>
    <fullName>Constituent_ID__c</fullName>
    <displayFormat>{0}</displayFormat>
    <externalId>true</externalId>
    <label>Constituent ID - Auto Number</label>
    <type>AutoNumber</type>
</CustomField>