force-app/main/default/objects/Contact/fields/Constituent_Types__c.field-meta.xml
<CustomField>
    <fullName>Constituent_Types__c</fullName>
    <label>Constituent Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ambassadors</fullName>
            </value>
            <value>
                <fullName>Bequest Giver</fullName>
            </value>
            <value>
                <fullName>Board Member</fullName>
            </value>
            <value>
                <fullName>Camp Quality Employee</fullName>
            </value>
            <value>
                <fullName>Camp Quality Membership - Financial</fullName>
            </value>
            <value>
                <fullName>Camp Quality Membership - Family</fullName>
                <label>Camp Quality Membership - Non Financial</label>
            </value>
            <value>
                <fullName>Community Fundraising Volunteer</fullName>
            </value>
            <value>
                <fullName>Corporate Volunteer</fullName>
            </value>
            <value>
                <fullName>Former Camp Quality Board Member</fullName>
            </value>
            <value>
                <fullName>Former Camp Quality Employee</fullName>
            </value>
            <value>
                <fullName>Health Professional</fullName>
            </value>
            <value>
                <fullName>Inactive Regular Giver</fullName>
            </value>
            <value>
                <fullName>Lapsed Camp Quality Membership - Financial</fullName>
            </value>
            <value>
                <fullName>Lapsed Camp Quality Membership - Non Financial</fullName>
            </value>
            <value>
                <fullName>National Corporate Partner</fullName>
            </value>
            <value>
                <fullName>Camp Quality Ambassador</fullName>
                <label>Past CQ Ambassador</label>
            </value>
            <value>
                <fullName>Philanthropy</fullName>
            </value>
            <value>
                <fullName>Regular Giver</fullName>
            </value>
            <value>
                <fullName>School Contact</fullName>
            </value>
            <value>
                <fullName>State Revenue Committee</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>Work Place Giving</fullName>
            </value>
            <value>
                <fullName>Not For Profit</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>