force-app/main/default/objects/Contact/fields/Contact_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_External_Id__c</fullName>
    <description>Contact External Id used for all adult contacts for system upsert</description>
    <externalId>true</externalId>
    <label>Contact External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>