force-app/main/default/objects/Contact/fields/Contact_Only_Primary_Family_Member__c.field-meta.xml
<CustomField>
    <fullName>Contact_Only_Primary_Family_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Only Primary Family Member</label>
    <type>Checkbox</type>
</CustomField>