force-app/main/default/objects/Contact/fields/ContactFullID__c.field-meta.xml
<CustomField>
    <fullName>ContactFullID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>ContactFullID</label>
    <type>Text</type>
</CustomField>