force-app/main/default/objects/Contact/fields/Convoy_Adelaide_EmailPref__c.field-meta.xml
<CustomField>
    <fullName>Convoy_Adelaide_EmailPref__c</fullName>
    <description>Convoy Adelaide Email Preference Centre</description>
    <label>Convoy_Adelaide_EmailPref</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Email_Preference_Centre</valueSetName>
    </valueSet>
</CustomField>