force-app/main/default/objects/Contact/fields/Convoy_Geelong_EmailPref__c.field-meta.xml
<CustomField>
    <fullName>Convoy_Geelong_EmailPref__c</fullName>
    <description>Convoy Geelong email preferences</description>
    <label>Convoy_Geelong_EmailPref</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Email_Preference_Centre</valueSetName>
    </valueSet>
</CustomField>