force-app/main/default/objects/Contact/fields/Convoy_Perth_EmailPref__c.field-meta.xml
<CustomField>
    <fullName>Convoy_Perth_EmailPref__c</fullName>
    <description>Convoy Perth Email Preferences</description>
    <label>Convoy_Perth_EmailPref</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Email_Preference_Centre</valueSetName>
    </valueSet>
</CustomField>