force-app/main/default/objects/Contact/fields/Covid_19_Vaccination_Date__c.field-meta.xml
<CustomField>
    <fullName>Covid_19_Vaccination_Date__c</fullName>
    <description>Date that this person was fully vaccinated against Covid-19</description>
    <inlineHelpText>Date that this person was fully vaccinated against Covid-19</inlineHelpText>
    <label>Covid-19 Vaccination Date</label>
    <type>Date</type>
</CustomField>