force-app/main/default/objects/Contact/fields/CQ__c.field-meta.xml
<CustomField>
    <fullName>CQ__c</fullName>
    <label>CQ Source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>