force-app/main/default/objects/Contact/fields/CQ_Customer_Reference_No__c.field-meta.xml
<CustomField>
    <fullName>CQ_Customer_Reference_No__c</fullName>
    <label>CQ Customer Reference No</label>
    <length>60</length>
    <type>Text</type>
</CustomField>