force-app/main/default/objects/Contact/fields/CQ_Supporter_ID__c.field-meta.xml
<CustomField>
    <fullName>CQ_Supporter_ID__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <externalId>true</externalId>
    <label>CQ Supporter ID</label>
    <type>AutoNumber</type>
</CustomField>