force-app/main/default/objects/Contact/fields/Current_First_Aid__c.field-meta.xml
<CustomField>
    <fullName>Current_First_Aid__c</fullName>
    <description>Do you have current First Aid/CPR certification?</description>
    <inlineHelpText>Do you have current First Aid/CPR certification?</inlineHelpText>
    <label>Current First Aid/CPR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Field</valueSetName>
    </valueSet>
</CustomField>