force-app/main/default/objects/Contact/fields/Current_FY_Recurring_Donations__c.field-meta.xml
<CustomField>
    <fullName>Current_FY_Recurring_Donations__c</fullName>
    <description>Total Amount of Recurring Donations over the 2021/2022 FY</description>
    <inlineHelpText>Total Amount of Recurring Donations over the 2021/2022 FY</inlineHelpText>
    <label>Current FY Recurring Donations</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>