force-app/main/default/objects/Contact/fields/Current_School_Year_Level__c.field-meta.xml
<CustomField>
    <fullName>Current_School_Year_Level__c</fullName>
    <label>Current School Year Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>