force-app/main/default/objects/Contact/fields/Dad_s_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Dad_s_Mobile__c</fullName>
    <label>Dad&apos;s Mobile</label>
    <type>Phone</type>
</CustomField>