force-app/main/default/objects/Contact/fields/DCA_Enrichment_Update__c.field-meta.xml
<CustomField>
    <fullName>DCA_Enrichment_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DCA Enrichment Update</description>
    <inlineHelpText>Did this contact have their details updated from the DCA Enrichment Data Project?</inlineHelpText>
    <label>DCA Enrichment Update</label>
    <type>Checkbox</type>
</CustomField>