force-app/main/default/objects/Contact/fields/Deactivate_Family__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_Family__c</fullName>
    <description>This is field using for Deactivate Family Portal Flow</description>
    <label>Deactivate Family</label>
    <type>DateTime</type>
</CustomField>