force-app/main/default/objects/Contact/fields/Deceased_Date__c.field-meta.xml
<CustomField>
    <fullName>Deceased_Date__c</fullName>
    <label>Deceased Date</label>
    <type>Date</type>
</CustomField>