force-app/main/default/objects/Contact/fields/Directors_at_Home__c.field-meta.xml
<CustomField>
    <fullName>Directors_at_Home__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DCA Enrichment</description>
    <label>Directors at Home</label>
    <type>Checkbox</type>
</CustomField>