force-app/main/default/objects/Contact/fields/Do_not_contact_reason__c.field-meta.xml
<CustomField>
    <fullName>Do_not_contact_reason__c</fullName>
    <description>For children under 18 this will be populated automatically. For others it is a manual process.</description>
    <label>Do not contact reason</label>
    <type>TextArea</type>
</CustomField>