force-app/main/default/objects/Contact/fields/Do_Not_Process_By_Lead_Flow__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Process_By_Lead_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hidden field to let lead conversion flow know that this contact does not needs to be processed by Flow</description>
    <inlineHelpText>Hidden field to let lead conversion flow know that this contact does not needs to be processed by Flow</inlineHelpText>
    <label>Do Not Process By Lead Flow</label>
    <type>Checkbox</type>
</CustomField>