force-app/main/default/objects/Contact/fields/Donor_Caseload_Status__c.field-meta.xml
<CustomField>
    <fullName>Donor_Caseload_Status__c</fullName>
    <inlineHelpText>Used for tracking the current case load status of philanthropy/major donor records.  Please note that just because someone is removed from the pool it does not mean that they can be treated as a regular donor.</inlineHelpText>
    <label>Donor Caseload Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unqualified</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>