force-app/main/default/objects/Contact/fields/Eligible_Child_Count__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Child_Count__c</fullName>
    <formula>if( AND(Year_Age__c &lt; 14, Added_After_Registration__c = false,  npsp__Deceased__c = false,  NOT( ISNULL( Birthdate ) ) ), 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible Child Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>