force-app/main/default/objects/Contact/fields/EmailPref_Convoy_Adelaide__c.field-meta.xml
<CustomField>
    <fullName>EmailPref_Convoy_Adelaide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EmailPref_Convoy_Adelaide</label>
    <type>Checkbox</type>
</CustomField>