force-app/main/default/objects/Contact/fields/EmailPref_Escarpade__c.field-meta.xml
<CustomField>
    <fullName>EmailPref_Escarpade__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EmailPref_Escarpade</label>
    <type>Checkbox</type>
</CustomField>