force-app/main/default/objects/Contact/fields/EmailPref_Funx4__c.field-meta.xml
<CustomField>
    <fullName>EmailPref_Funx4__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EmailPref_Funx4</label>
    <type>Checkbox</type>
</CustomField>