force-app/main/default/objects/Contact/fields/EmailPref_Motocyc__c.field-meta.xml
<CustomField>
    <fullName>EmailPref_Motocyc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EmailPref_Motocyc</label>
    <type>Checkbox</type>
</CustomField>