force-app/main/default/objects/Contact/fields/EmailPref_PhysicalChallenges__c.field-meta.xml
<CustomField>
    <fullName>EmailPref_PhysicalChallenges__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For account engagement preference centre, not to be manually edited.</description>
    <label>EmailPref_PhysicalChallenges</label>
    <type>Checkbox</type>
</CustomField>